@@ -1,12 +1,16 @@
 package com.chaseelkins.assetmanagement.config;
 
 import com.chaseelkins.assetmanagement.security.JwtAuthenticationFilter;
+import com.chaseelkins.assetmanagement.tenant.TenantFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import java.util.Arrays;
 import java.util.List;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -16,6 +20,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.http.HttpMethod;
 
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 
@@ -34,52 +39,143 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtAuthenticationFilter jwtAuthFilter) throws Exception {
+    public SecurityFilterChain securityFilterChain(
+            HttpSecurity http, 
+            JwtAuthenticationFilter jwtAuthFilter,
+            @Value("${spring.profiles.active:dev}") String activeProfile) throws Exception {
+        
         http
             .cors(Customizer.withDefaults())
-            // Re-enable CSRF protection; only ignore explicitly allowed unauthenticated endpoints
-            .csrf(csrf -> csrf
-                .ignoringRequestMatchers(
-                    "/auth/**", // Authentication endpoints use stateless JWT
-                    "/actuator/**", // Operational endpoints (if desired to exclude)
-                    "/h2-console/**" // H2 console (DEV only)
-                )
-            )
+            // CSRF disabled: This is a stateless JWT API without cookie-based sessions.
+            // CSRF protection is not needed as tokens are sent via Authorization header,
+            // not cookies. Attacks would require stealing the JWT token itself.
+            // See: https://owasp.org/www-community/attacks/csrf
+            .csrf(csrf -> csrf.disable())
             .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/actuator/**", "/health", "/h2-console/**", "/auth/**", "/swagger-ui.html", "/swagger-ui/**", "/api-docs/**").permitAll()
-                // Allow anonymous access to read-only endpoints for testing
-                .requestMatchers("/", "/categories", "/categories/active", "/categories/recent", "/assets", "/dashboard/stats").permitAll()
-                // Other endpoints require authentication
-                .requestMatchers("/assets/**", "/categories/**", "/maintenance/**", "/users/**", "/dashboard/**").authenticated()
-                .anyRequest().authenticated()
-            )
-            .headers(headers -> headers.frameOptions(frame -> frame.disable())); // For H2 console
+            .authorizeHttpRequests(auth -> {
+                // CRITICAL: Allow all OPTIONS requests (CORS preflight) FIRST
+                auth.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll();
+                
+                // Public health endpoints (without /api/v1 prefix - it's the context path)
+                auth.requestMatchers("/actuator/health", "/healthz", "/health").permitAll();
+                
+                // H2 Console - ONLY in dev profile, NEVER production or test
+                if ("dev".equals(activeProfile)) {
+                    auth.requestMatchers("/h2-console/**").permitAll();
+                }
+                
+                // Authentication endpoints (without /api/v1 prefix)
+                auth.requestMatchers("/auth/**").permitAll();
+                
+                // Tenant registration - public endpoint for SaaS signup (without /api/v1 prefix)
+                auth.requestMatchers("/tenants/register").permitAll();
+                
+                // Swagger/OpenAPI - require authentication in all environments
+                if ("prod".equals(activeProfile)) {
+                    // Completely disable in production for security
+                    auth.requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/api-docs/**", "/v3/api-docs/**").denyAll();
+                } else {
+                    // Require SUPER_ADMIN in non-production
+                    auth.requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/api-docs/**", "/v3/api-docs/**").hasRole("SUPER_ADMIN");
+                }
+                
+                // Admin-only actuator endpoints (without /api/v1 prefix)
+                auth.requestMatchers("/actuator/**").hasRole("SUPER_ADMIN");
+                
+                // All other API endpoints require authentication
+                auth.requestMatchers("/assets/**", "/categories/**", "/maintenance/**", 
+                                     "/users/**", "/dashboard/**", "/tenants/**", "/subscription/**", "/stripe/**").authenticated();
+                
+                // Default deny all other requests
+                auth.anyRequest().authenticated();
+            })
+            .headers(headers -> {
+                // Frame options - strict in production, allow same-origin in dev for H2
+                if ("prod".equals(activeProfile)) {
+                    headers.frameOptions(frame -> frame.deny());
+                } else {
+                    headers.frameOptions(frame -> frame.sameOrigin());
+                }
+                
+                // X-Content-Type-Options: nosniff
+                headers.contentTypeOptions(Customizer.withDefaults());
+                
+                // X-XSS-Protection (deprecated but still useful for older browsers)
+                headers.xssProtection(Customizer.withDefaults());
+                
+                // Strict-Transport-Security (HTTPS enforcement in production)
+                if ("prod".equals(activeProfile)) {
+                    headers.httpStrictTransportSecurity(hsts -> 
+                        hsts.includeSubDomains(true)
+                            .maxAgeInSeconds(31536000)  // 1 year
+                    );
+                }
+                
+                // Content-Security-Policy
+                headers.contentSecurityPolicy(csp -> csp.policyDirectives(
+                    "default-src 'self'; " +
+                    "script-src 'self' 'unsafe-inline' 'unsafe-eval'; " +  // Required for React
+                    "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; " +
+                    "font-src 'self' https://fonts.gstatic.com; " +
+                    "img-src 'self' data: https:; " +
+                    "connect-src 'self' https://api.openai.com; " +
+                    "frame-ancestors 'none'; " +
+                    "base-uri 'self'; " +
+                    "form-action 'self'"
+                ));
+                
+                // Referrer-Policy
+                headers.referrerPolicy(policy -> 
+                    policy.policy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN)
+                );
+            });
 
+        // Add filters in correct order:
+        // 1. TenantFilter (extract tenant from subdomain/header)
+        // 2. JwtAuthenticationFilter (authenticate user and extract tenant from JWT)
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+        
         return http.build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource(
+            @Value("${app.cors.allowed-origins:http://localhost:3005}") String allowedOrigins,
+            @Value("${spring.profiles.active:dev}") String activeProfile) {
+        
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://127.0.0.1:3000",
-                "http://localhost:3001",
-                "http://127.0.0.1:3001",
-                "http://localhost:3005",
-                "http://127.0.0.1:3005",
-                "http://localhost:3006",
-                "http://127.0.0.1:3006",
-                "http://localhost:5173",
-                "http://127.0.0.1:5173"
+        
+        // Parse allowed origins from comma-separated string
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        
+        // Allowed HTTP methods
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        
+        // Explicit headers - NO WILDCARDS for security
+        config.setAllowedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "X-Requested-With",
+            "X-API-Key",
+            "X-Correlation-ID"
         ));
-        config.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("Authorization","Content-Type"));
+        
+        // Headers exposed to client
+        config.setExposedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "X-Total-Count",
+            "X-RateLimit-Limit",
+            "X-RateLimit-Remaining",
+            "X-RateLimit-Reset"
+        ));
+        
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L); // Cache preflight response for 1 hour
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // Register CORS for ALL paths (since context path is /api/v1)
         source.registerCorsConfiguration("/**", config);
         return source;
     }
